--- a/argocd/apps/prod-k8s/crucible/blueprint.values.yaml
+++ b/argocd/apps/prod-k8s/crucible/blueprint.values.yaml
@@ -8,19 +8,19 @@ blueprint-api:
   ingress:
     enabled: true
     annotations:
-      kubernetes.io/ingress.class: nginx
+      kubernetes.io/ingress.class: <path:gauntletdevk8s/data/shared#ingress-class>
       nginx.ingress.kubernetes.io/proxy-read-timeout: '86400'
       nginx.ingress.kubernetes.io/proxy-send-timeout: '86400'
       nginx.ingress.kubernetes.io/use-regex: "true"
     hosts:
-      - host: fortress.sei.cmu.edu
+      - host: <path:gauntletdevk8s/data/shared#domain>
         paths:
           - path: /blueprint/(api|swagger|hubs)
             pathType: Prefix
     tls:
       - secretName: appliance-cert
         hosts:
-         - fortress.sei.cmu.edu
+         - <path:gauntletdevk8s/data/shared#domain>
 
   resources:
     requests:
@@ -31,7 +31,7 @@ blueprint-api:
     PathBase: "/blueprint"
     # CORS policy settings.
     # The first entry should be the URL to Blueprint
-    CorsPolicy__Origins__0: https://fortress.sei.cmu.edu
+    CorsPolicy__Origins__0: https://<path:gauntletdevk8s/data/shared#domain>
     
     CorsPolicy__AllowAnyMethod: true
     CorsPolicy__AllowAnyHeader: true
@@ -45,7 +45,7 @@ blueprint-api:
     Authorization__AuthorizationUrl: https://fortress.sei.cmu.edu/keycloak/realms/crucible/protocol/openid-connect/auth
     Authorization__TokenUrl: https://fortress.sei.cmu.edu/keycloak/realms/crucible/protocol/openid-connect/token
     Authorization__AuthorizationScope: "blueprint-api"
-    Authorization__ClientId: "blueprint-api"
+    Authorization__ClientId: "<path:gauntletdevk8s/data/shared#oauth-env>_<path:gauntletdevk8s/data/shared#oauth-gid>_blueprint-api"
     Authorization__ClientName: "Blueprint API"
 
 
@@ -75,17 +75,17 @@ blueprint-ui:
   ingress:
     enabled: true
     annotations:
-      kubernetes.io/ingress.class: nginx
+      kubernetes.io/ingress.class: <path:gauntletdevk8s/data/shared#ingress-class>
       nginx.ingress.kubernetes.io/use-regex: "true"
     hosts:
-      - host: fortress.sei.cmu.edu
+      - host: <path:gauntletdevk8s/data/shared#domain>
         paths:
           - path: /blueprint(/|$)(.*)
             pathType: Prefix
     tls:
       - secretName: appliance-cert
         hosts:
-         - fortress.sei.cmu.edu
+         - <path:gauntletdevk8s/data/shared#domain>
 
   resources:
     requests:
@@ -102,7 +102,7 @@ blueprint-ui:
       "ApiUrl": "https://fortress.sei.cmu.edu/blueprint",
       "OIDCSettings": {
         "authority": "https://fortress.sei.cmu.edu/keycloak/realms/crucible",
-        "client_id": "blueprint-ui",
+        "client_id": "<path:gauntletdevk8s/data/shared#oauth-env>_<path:gauntletdevk8s/data/shared#oauth-gid>_blueprint-api",
         "redirect_uri": "https://fortress.sei.cmu.edu/blueprint/auth-callback",
         "post_logout_redirect_uri": "https://fortress.sei.cmu.edu/blueprint",
         "response_type": "code",
