--- a/argocd/apps/prod-k8s/crucible/gallery.values.yaml
+++ b/argocd/apps/prod-k8s/crucible/gallery.values.yaml
@@ -9,19 +9,19 @@ gallery-api:
   ingress:
     enabled: true
     annotations:
-      kubernetes.io/ingress.class: nginx
+      kubernetes.io/ingress.class: <path:fortress-prod/data/shared#ingress-class>
       nginx.ingress.kubernetes.io/proxy-read-timeout: '86400'
       nginx.ingress.kubernetes.io/proxy-send-timeout: '86400'
       nginx.ingress.kubernetes.io/use-regex: "true"
     hosts:
-      - host: fortress.sei.cmu.edu
+      - host: <path:fortress-prod/data/shared#domain>
         paths:
           - path: /gallery/(api|swagger|hubs)
             pathType: Prefix
     tls:
       - secretName: appliance-cert
         hosts:
-         - fortress.sei.cmu.edu
+         - <path:fortress-prod/data/shared#domain>
 
   resources:
     requests:
@@ -32,28 +32,28 @@ gallery-api:
     PathBase: "/gallery"
     # CORS policy settings.
     # The first entry should be the URL to Gallery
-    CorsPolicy__Origins__0: https://fortress.sei.cmu.edu
+    CorsPolicy__Origins__0: https://<path:fortress-prod/data/shared#domain>
 
     # Connection String to database
     # database requires the 'uuid-ossp' extension installed
     ConnectionStrings__PostgreSQL: <path:fortress-prod/data/gallery#gallery-db-connection-string> 
 
     # OAuth2 Identity Client for Application
-    Authorization__Authority: https://fortress.sei.cmu.edu/keycloak/realms/crucible
-    Authorization__AuthorizationUrl: https://fortress.sei.cmu.edu/keycloak/realms/crucible/protocol/openid-connect/auth
-    Authorization__TokenUrl: https://fortress.sei.cmu.edu/keycloak/realms/crucible/protocol/openid-connect/token
+    Authorization__Authority: https://<path:fortress-prod/data/shared#domain>/keycloak/realms/crucible
+    Authorization__AuthorizationUrl: https://<path:fortress-prod/data/shared#domain>/keycloak/realms/crucible/protocol/openid-connect/auth
+    Authorization__TokenUrl: https://<path:fortress-prod/data/shared#domain>/keycloak/realms/crucible/protocol/openid-connect/token
     Authorization__AuthorizationScope: "gallery-api"
-    Authorization__ClientId: gallery-api
+    Authorization__ClientId: <path:fortress-prod/data/shared#oauth-env>_<path:fortress-prod/data/shared#oauth-gid>_gallery-api
     Authorization__ClientName: Gallery API
 
     # OAuth2 Identity Client /w Password
-    ResourceOwnerAuthorization__Authority: https://fortress.sei.cmu.edu/keycloak/realms/crucible
-    ResourceOwnerAuthorization__ClientId: gallery-admin
+    ResourceOwnerAuthorization__Authority: https://<path:fortress-prod/data/shared#domain>/keycloak/realms/crucible
+    ResourceOwnerAuthorization__ClientId: <path:fortress-prod/data/shared#oauth-env>_<path:fortress-prod/data/shared#oauth-gid>_gallery-admin
     ResourceOwnerAuthorization__UserName: <path:fortress-prod/data/shared#crucible-admin-user>
     ResourceOwnerAuthorization__Password: <path:fortress-prod/data/shared#crucible-admin-pass>
     ResourceOwnerAuthorization__Scope: "steamfitter-api player-api vm-api"
 
-    ClientSettings__SteamfitterApiUrl: https://fortress.sei.cmu.edu/steamfitter/api
+    ClientSettings__SteamfitterApiUrl: https://<path:fortress-prod/data/shared#domain>/steamfitter/api
     ClientSettings__IsEmailActive: "true"
 
     Logging__Debug__LogLevel__System: "Warning"
@@ -83,16 +83,16 @@ gallery-ui:
   ingress:
     enabled: true
     annotations:
-      kubernetes.io/ingress.class: nginx
+      kubernetes.io/ingress.class: <path:fortress-prod/data/shared#ingress-class>
     hosts:
-      - host: fortress.sei.cmu.edu
+      - host: <path:fortress-prod/data/shared#domain>
         paths:
           - path: /gallery
             pathType: Prefix
     tls:
       - secretName: appliance-cert
         hosts:
-         - fortress.sei.cmu.edu
+         - <path:fortress-prod/data/shared#domain>
 
   resources:
     requests:
@@ -106,16 +106,16 @@ gallery-ui:
   # some basic configuration
   settings: |-
     {
-      "ApiUrl": "https://fortress.sei.cmu.edu/gallery",
+      "ApiUrl": "https://<path:fortress-prod/data/shared#domain>/gallery",
       "OIDCSettings": {
-        "authority": "https://fortress.sei.cmu.edu/keycloak/realms/crucible",
-        "client_id": "gallery-ui",
-        "redirect_uri": "https://fortress.sei.cmu.edu/gallery/auth-callback",
-        "post_logout_redirect_uri": "https://fortress.sei.cmu.edu/gallery",
+        "authority": "https://<path:fortress-prod/data/shared#domain>/keycloak/realms/crucible",
+        "client_id": "<path:fortress-prod/data/shared#oauth-env>_<path:fortress-prod/data/shared#oauth-gid>_gallery-ui",
+        "redirect_uri": "https://<path:fortress-prod/data/shared#domain>/gallery/auth-callback",
+        "post_logout_redirect_uri": "https://<path:fortress-prod/data/shared#domain>/gallery",
         "response_type": "code",
         "scope": "openid profile gallery-api",
         "automaticSilentRenew": true,
-        "silent_redirect_uri": "https://fortress.sei.cmu.edu/gallery/auth-callback-silent"
+        "silent_redirect_uri": "https://<path:fortress-prod/data/shared#domain>/gallery/auth-callback-silent"
       },
       "AppTitle": "Gallery",
       "AppTopBarHexColor": "#2d69b4",
