--- a/argocd/apps/prod-k8s/crucible/blueprint.values.yaml
+++ b/argocd/apps/prod-k8s/crucible/blueprint.values.yaml
@@ -13,14 +13,14 @@ blueprint-api:
       nginx.ingress.kubernetes.io/proxy-send-timeout: '86400'
       nginx.ingress.kubernetes.io/use-regex: "true"
     hosts:
-      - host: "<path:fortress-prod/data/shared#domain>"
+      - host: <path:fortress-prod/data/shared#domain>
         paths:
           - path: /blueprint/(api|swagger|hubs)
             pathType: Prefix
     tls:
       - secretName: appliance-cert
         hosts:
-         - "<path:fortress-prod/data/shared#domain>"
+         - <path:fortress-prod/data/shared#domain>
 
   resources:
     requests:
@@ -41,12 +41,17 @@ blueprint-api:
     ConnectionStrings__PostgreSQL: <path:fortress-prod/data/blueprint#blueprint-db-connection-string>
     
     # OAuth2 Identity Client for Application
-    Authorization__Authority: https://fortress.sei.cmu.edu/keycloak/realms/crucible
-    Authorization__AuthorizationUrl: https://fortress.sei.cmu.edu/keycloak/realms/crucible/protocol/openid-connect/auth
-    Authorization__TokenUrl: https://fortress.sei.cmu.edu/keycloak/realms/crucible/protocol/openid-connect/token
-    Authorization__AuthorizationScope: "blueprint-api"
+    Authorization__Authority: https://<path:fortress-prod/data/shared#domain>/keycloak/realms/crucible
+    Authorization__AuthorizationUrl: https://<path:fortress-prod/data/shared#domain>/keycloak/realms/crucible/protocol/openid-connect/auth
+    Authorization__TokenUrl: https://<path:fortress-prod/data/shared#domain>/keycloak/realms/crucible/protocol/openid-connect/token
+    Authorization__AuthorizationScope: "blueprint-api cite-api gallery-api player-api vm-api steamfitter-api"
     Authorization__ClientId: "<path:fortress-prod/data/shared#oauth-env>_<path:fortress-prod/data/shared#oauth-gid>_blueprint-api"
     Authorization__ClientName: "Blueprint API"
+    
+    ClientSettings__CiteApiUrl: "https://<path:fortress-prod/data/shared#domain>/cite"
+    ClientSettings__GalleryApiUrl: "https://<path:fortress-prod/data/shared#domain>/gallery"
+    ClientSettings__PlayerApiUrl: "https://<path:fortress-prod/data/shared#domain>/player"
+    ClientSettings__SteamfitterApiUrl: "https://<path:fortress-prod/data/shared#domain>/steamfitter"
 
 
     Logging__Debug__LogLevel__System: "Warning"
@@ -102,11 +107,11 @@ blueprint-ui:
       "ApiUrl": "https://fortress.sei.cmu.edu/blueprint",
       "OIDCSettings": {
         "authority": "https://fortress.sei.cmu.edu/keycloak/realms/crucible",
-        "client_id": "<path:fortress-prod/data/shared#oauth-env>_<path:fortress-prod/data/shared#oauth-gid>_blueprint-api",
+        "client_id": "<path:fortress-prod/data/shared#oauth-env>_<path:fortress-prod/data/shared#oauth-gid>_blueprint-ui",
         "redirect_uri": "https://fortress.sei.cmu.edu/blueprint/auth-callback",
         "post_logout_redirect_uri": "https://fortress.sei.cmu.edu/blueprint",
         "response_type": "code",
-        "scope": "openid profile blueprint-api",
+        "scope": "openid profile blueprint-api cite-api gallery-api player-api vm-api steamfitter-api",
         "automaticSilentRenew": true,
         "silent_redirect_uri": "https://fortress.sei.cmu.edu/blueprint/auth-callback-silent"
       },
