--- a/argocd/apps/prod-k8s/crucible/cite.values.yaml
+++ b/argocd/apps/prod-k8s/crucible/cite.values.yaml
@@ -101,7 +101,7 @@ cite-api:
     Authorization__Authority: https://<path:fortress-prod/data/shared#domain>/keycloak/realms/crucible
     Authorization__AuthorizationUrl: https://<path:fortress-prod/data/shared#domain>/keycloak/realms/crucible/protocol/openid-connect/auth
     Authorization__TokenUrl: https://<path:fortress-prod/data/shared#domain>/keycloak/realms/crucible/protocol/openid-connect/token
-    Authorization__AuthorizationScope: "cite-api gallery-api"
+    Authorization__AuthorizationScope: "oauth cite-api"
     Authorization__ClientId: "<path:fortress-prod/data/shared#oauth-env>_<path:fortress-prod/data/shared#oauth-gid>_cite-api"
     Authorization__ClientName: "CITE API"
 
@@ -110,7 +110,7 @@ cite-api:
     ResourceOwnerAuthorization__ClientId:  <path:fortress-prod/data/shared#oauth-env>_<path:fortress-prod/data/shared#oauth-gid>_cite-admin
     ResourceOwnerAuthorization__UserName: <path:fortress-prod/data/shared#crucible-admin-user>
     ResourceOwnerAuthorization__Password: <path:fortress-prod/data/shared#crucible-admin-pass>
-    ResourceOwnerAuthorization__Scope: "gallery-api"
+    ResourceOwnerAuthorization__Scope: "cite-api gallery-api"
 
     ClientSettings__GalleryApiUrl: https://<path:fortress-prod/data/shared#domain>/gallery/api
 
