--- a/argocd/apps/prod-k8s/crucible/cite.values.yaml
+++ b/argocd/apps/prod-k8s/crucible/cite.values.yaml
@@ -101,7 +101,7 @@ cite-api:
     Authorization__Authority: https://<path:fortress-prod/data/shared#domain>/keycloak/realms/crucible
     Authorization__AuthorizationUrl: https://<path:fortress-prod/data/shared#domain>/keycloak/realms/crucible/protocol/openid-connect/auth
     Authorization__TokenUrl: https://<path:fortress-prod/data/shared#domain>/keycloak/realms/crucible/protocol/openid-connect/token
-    Authorization__AuthorizationScope: "openid cite-api"
+    Authorization__AuthorizationScope: "openid cite-api gallery-api"
     Authorization__ClientId: "<path:fortress-prod/data/shared#oauth-env>_<path:fortress-prod/data/shared#oauth-gid>_cite-api"
     Authorization__ClientName: "CITE API"
 
