--- a/argocd/apps/prod-k8s/crucible/steamfitter.values.yaml
+++ b/argocd/apps/prod-k8s/crucible/steamfitter.values.yaml
@@ -108,7 +108,7 @@ steamfitter-ui:
 
   extraVolumeMounts: |
     - name: fortress-branding-vol
-      mountPath: /usr/share/nginx/html/assets/img/alloy.ico
+      mountPath: /usr/share/nginx/html/assets/img/steamfitter.ico
       subPath: steamfitter.ico
     - name: fortress-branding-vol
       mountPath: /usr/share/nginx/html/assets/img/crucible-logo-light.png
@@ -117,7 +117,7 @@ steamfitter-ui:
       mountPath: /usr/share/nginx/html/assets/img/crucible-logo-dark.png
       subPath: crucible-logo-dark.png
     - name: fortress-branding-svg-vol
-      mountPath: /usr/share/nginx/html/assets/svg-icons/ic_crucible_alloy.svg
+      mountPath: /usr/share/nginx/html/assets/svg-icons/ic_crucible_steamfitter.svg
       subPath: ic_crucible_steamfitter.svg
   env: 
     ## basehref is path to the app
@@ -132,7 +132,7 @@ steamfitter-ui:
       "ApiPlayerUrl": "https://<path:fortress-prod/data/shared#domain>/player",
       "OIDCSettings": {
           "authority": "https://<path:fortress-prod/data/shared#domain>/<path:fortress-prod/data/shared#oauth-provider>/<path:fortress-prod/data/shared#oauth-authority-url>",
-          "client_id": "steamfitter-ui",
+          "client_id": "<path:fortress-prod/data/shared#oauth-env>_<path:fortress-prod/data/shared#oauth-gid>_steamfitter-ui",
           "redirect_uri": "https://<path:fortress-prod/data/shared#domain>/steamfitter/auth-callback",
           "post_logout_redirect_uri": "https://<path:fortress-prod/data/shared#domain>/steamfitter",
           "response_type": "code",
