--- a/argocd/apps/prod-argo/apps/crucible/osticket.config.json
+++ b/argocd/apps/prod-argo/apps/crucible/osticket.config.json
@@ -5,6 +5,6 @@
         "helm_repo" : "https://helm.cmusei.dev/charts",
         "helm_chart_name" : "osticket",
         "helm_chart_version" : "1.17.5",
-        "helm_args" : "-f osticket.values.yaml"
+        "helm_args" : "-n default -f osticket.values.yaml"
     }
 }
