--- a/argocd/apps/prod-k8s/crucible/player.values.yaml
+++ b/argocd/apps/prod-k8s/crucible/player.values.yaml
@@ -381,7 +381,7 @@ console-ui:
   image:
     repository: cmusei/vm-console-ui
     pullPolicy: IfNotPresent
-    tag: "3.1.2"
+    tag: "3.2.0"
 
   # Ingress configuration example for NGINX
   # TLS and Host URLs need configured
@@ -420,7 +420,7 @@ console-ui:
         "response_type": "code",
         "scope": "openid profile player-api vm-api",
         "automaticSilentRenew": true,
-        "silent_redirect_uri": "https://<path:fortress-prod/data/shared#domain>/console/auth-callback-silent"
+        "silent_redirect_uri": "https://<path:fortress-prod/data/shared#domain>/console/auth-callback-silent.html"
       },
       "UseLocalAuthStorage": true,
       "VmResolutionOptions": [
