--- a/argocd/apps/prod-argo/apps/monitoring/monitoring.config.json
+++ b/argocd/apps/prod-argo/apps/monitoring/monitoring.config.json
@@ -4,7 +4,7 @@
         "project_branch" : "HEAD",
         "helm_repo" : "https://prometheus-community.github.io/helm-charts",
         "helm_chart_name" : "kube-prometheus-stack",
-        "helm_chart_version" : "48.2.3",",
+        "helm_chart_version" : "48.2.3",
         "helm_args" : "-n monitoring -f kube-prometheus-stack.values.yaml"
     }
 }
