update with websocket plugin

--- a/argocd/apps/prod-k8s/monitoring/kube-prometheus-stack.values.yaml
+++ b/argocd/apps/prod-k8s/monitoring/kube-prometheus-stack.values.yaml
@@ -863,7 +863,12 @@ alertmanager:
 grafana:
   enabled: true
   namespaceOverride: ""
+  envFromSecrets: 
+    - name: webproxy-secret
+      optional: true
 
+  plugins: 
+    - golioth-websocket-datasource
   
   ## ForceDeployDatasources Create datasource configmap even if grafana deployment has been disabled
   ##
