--- a/argocd/apps/prod-k8s/monitoring/kube-prometheus-stack.values.yaml
+++ b/argocd/apps/prod-k8s/monitoring/kube-prometheus-stack.values.yaml
@@ -966,19 +966,19 @@ grafana:
         #root_url: '%(protocol)s://%(domain)s:%(http_port)s/monitoring/'
       root_url: https://fortress.sei.cmu.edu/monitoring
       serve_from_sub_path: true
-    auth.generic_oauth:
-      enabled: false
-      name: Keycloak
-      allow_sign_up: false
-      client_id: grafana-client
-      client_secret: Jmi7EOw5ScyBiGxgJED9xkJvytxwvTbu
-      scopes: "openid email profile"
-      auth_url: https://<path:fortress-prod/data/shared#domain>/<path:fortress-prod/data/shared#oauth-provider>/<path:fortress-prod/data/shared#oauth-authority-url>
-      token_url: https://<path:fortress-prod/data/shared#domain>/<path:fortress-prod/data/shared#oauth-provider>/<path:fortress-prod/data/shared#oauth-token-url>
-      api_url: https://<path:fortress-prod/data/shared#domain>/<path:fortress-prod/data/shared#oauth-provider>/<path:fortress-prod/data/shared#oauth-userapi-url>
-      name_attribute_path: name
-      email_attribute_path: email
-      email_attribute_name: email
+        #    auth.generic_oauth:
+        #      enabled: false
+        #      name: Keycloak
+        #      allow_sign_up: false
+        #      client_id: grafana-client
+        #      client_secret: Jmi7EOw5ScyBiGxgJED9xkJvytxwvTbu
+        #      scopes: "openid email profile"
+        #      auth_url: https://<path:fortress-prod/data/shared#domain>/<path:fortress-prod/data/shared#oauth-provider>/<path:fortress-prod/data/shared#oauth-authority-url>
+        #      token_url: https://<path:fortress-prod/data/shared#domain>/<path:fortress-prod/data/shared#oauth-provider>/<path:fortress-prod/data/shared#oauth-token-url>
+        #      api_url: https://<path:fortress-prod/data/shared#domain>/<path:fortress-prod/data/shared#oauth-provider>/<path:fortress-prod/data/shared#oauth-userapi-url>
+        #      name_attribute_path: name
+        #      email_attribute_path: email
+        #      email_attribute_name: email
         #skip_org_role_sync: false
         #tls_skip_verify_insecure: true
         #role_attribute_strict: false
