make grafana persistent

--- a/argocd/apps/prod-k8s/monitoring/kube-prometheus-stack.values.yaml
+++ b/argocd/apps/prod-k8s/monitoring/kube-prometheus-stack.values.yaml
@@ -1049,15 +1049,15 @@ grafana:
 
   # # To make Grafana persistent (Using Statefulset)
   # #
-  # persistence:
-  #   enabled: true
-  #   type: sts
-  #   storageClassName: "storageClassName"
-  #   accessModes:
-  #     - ReadWriteOnce
-  #   size: 20Gi
-  #   finalizers:
-  #     - kubernetes.io/pvc-protection
+  persistence:
+    enabled: true
+    type: sts
+    storageClassName: "longhorn"
+    accessModes:
+      - ReadWriteOnce
+    size: 20Gi
+    finalizers:
+      - kubernetes.io/pvc-protection
 
   sidecar:
     dashboards:
