enable console ingress

--- a/argocd/apps/prod-k8s/crucible/player.values.yaml
+++ b/argocd/apps/prod-k8s/crucible/player.values.yaml
@@ -210,7 +210,7 @@ vm-api:
   #   connections will go directly from the UI to the vCenter hosts themselves
   # - The host value here corresponds to RewriteHost__RewriteHostUrl below
   consoleIngress:
-    deployConsoleProxy: false
+    deployConsoleProxy: true
     name: player-connect
     annotations:
       kubernetes.io/ingress.class: <path:fortress-prod/data/shared#ingress-class>
