update path for mongo

--- a/argocd/apps/prod-argo/apps/crucible-external-bitnami/mongodb.config.json
+++ b/argocd/apps/prod-argo/apps/crucible-external-bitnami/mongodb.config.json
@@ -3,6 +3,6 @@
         "project_name" : "mongodb",
         "helm_chart" : "oci://registry-1.docker.io/bitnamicharts/mongodb",
         "helm_chart_version" : "14.8.3",
-        "helm_args" : "-n default -f bitnami/mongodb/mongodb.values.yaml" 
+        "helm_args" : "-n default -f mongodb/mongodb.values.yaml" 
     }
 }
