--- a/argocd/apps/prod-k8s/crucible-external/bitnami/mongodb/mongodb.values.yaml
+++ b/argocd/apps/prod-k8s/crucible-external/bitnami/mongodb/mongodb.values.yaml
@@ -27,7 +27,7 @@ persistence:
   enabled: true
   storageClass: "longhorn"
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   size: 8Gi
   annotations: {}
   mountPath: /bitnami/mongodb
