update Security Context to handle larger volumes better

--- a/argocd/apps/prod-k8s/monitoring/kube-prometheus-stack.values.yaml
+++ b/argocd/apps/prod-k8s/monitoring/kube-prometheus-stack.values.yaml
@@ -840,6 +840,7 @@ alertmanager:
       fsGroup: 2000
       seccompProfile:
         type: RuntimeDefault
+      fsGroupChangePolicy: "OnRootMismatch"
 
     ## ListenLocal makes the Alertmanager server listen on loopback, so that it does not bind against the Pod IP.
     ## Note this is only for the Alertmanager UI, not the gossip communication.
@@ -2353,6 +2354,7 @@ prometheusOperator:
         runAsUser: 65534
         seccompProfile:
           type: RuntimeDefault
+        fsGroupChangePolicy: "OnRootMismatch"
 
       ## Container-specific security context configuration
       ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
@@ -2394,6 +2396,7 @@ prometheusOperator:
         runAsUser: 2000
         seccompProfile:
           type: RuntimeDefault
+        fsGroupChangePolicy: "OnRootMismatch"
 
     # Security context for create job container
     createSecretJob:
@@ -2664,6 +2667,7 @@ prometheusOperator:
     runAsUser: 65534
     seccompProfile:
       type: RuntimeDefault
+    fsGroupChangePolicy: "OnRootMismatch"
 
   ## Container-specific security context configuration
   ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
@@ -3758,6 +3762,7 @@ prometheus:
       fsGroup: 2000
       seccompProfile:
         type: RuntimeDefault
+      fsGroupChangePolicy: "OnRootMismatch"
 
     ## Priority class assigned to the Pods
     ##
@@ -4509,6 +4514,7 @@ thanosRuler:
       fsGroup: 2000
       seccompProfile:
         type: RuntimeDefault
+      fsGroupChangePolicy: "OnRootMismatch"
 
     ## ListenLocal makes the ThanosRuler server listen on loopback, so that it does not bind against the Pod IP.
     ## Note this is only for the ThanosRuler UI, not the gossip communication.
