--- a/argocd/apps/nginx/kustomize/base/kustomization.yaml
+++ b/argocd/apps/nginx/kustomize/base/kustomization.yaml
@@ -7,6 +7,7 @@ helmCharts:
   version: v4.11.1
   repo: https://kubernetes.github.io/ingress-nginx
   releaseName: appliance
+  valuesFile: "../../../values/postgresql.values.yaml"
 resources: 
 - namespace.yaml
 
