--- a/argocd/apps/nginx/Application.yaml
+++ b/argocd/apps/nginx/Application.yaml
@@ -1,22 +1,26 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: http-echo
+  name: nginx
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: default
+    namespace: ingress-nginx
     server: https://kubernetes.default.svc
   project: default
   syncPolicy:
     automated:
       prune: true
+    syncOptions:
+    - CreateNamespace=true
   source:
-    path: http-echo/kustomize/overlays/appliance
+    path: nginx/kustomize/overlays/appliance
     repoURL: file:///tmp/apps
-    targetRevision: master
+    targetRevision: HEAD
     kustomize:
-      namePrefix: appliance-
+      commonLabels:
+        foo: bar
+      
       
