keycloak: remove secrets and configmap from child appliance overlay

--- a/argocd/apps/keycloak/kustomize/base/kustomization.yaml
+++ b/argocd/apps/keycloak/kustomize/base/kustomization.yaml
@@ -11,6 +11,11 @@ helmCharts:
 resources: 
 - namespace.yaml
 
+labels:
+- pairs:
+    config: keycloak
+  includeSelectors: true
+
 secretGenerator:
 - name: dod-certs
   files:
