update argocd app template to include default destination server

--- a/argocd/apps/_template/Application.yaml
+++ b/argocd/apps/_template/Application.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   destination:
     namespace: <dst_namespace>
-    server: <dst_cluster>
+    server: https://kubernetes.default.svc
   project: default
   syncPolicy:
     automated:
